# moder_bpm_prime

./: Dockerfile  README.md  alembic.ini  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
bot/: config.py  main.py
bot/database/: connection.py  crud.py  models.py
bot/filters/: is_admin.py
bot/handlers/: admin.py  moderation.py  profile.py  shop.py  text_commands.py
bot/handlers/farming/: business.py  clan.py  crime.py  daily.py  work.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: blacklist.py  database.py  registration.py  throttle.py
bot/services/: clan_service.py  farming_service.py
bot/utils/: formatting.py  helpers.py  text.py
docs/: ARCHITECTURE.md  BLACKLIST.md  COMMANDS.md  DATABASE.md  DEPLOY.md  FARMING.md
moder_bpm_prime/: Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
moder_bpm_prime/alembic/: env.py
moder_bpm_prime/bot/: config.py  main.py
moder_bpm_prime/bot/database/: models.py
moder_bpm_prime/bot/filters/: __init__.py  chat_type.py
moder_bpm_prime/bot/handlers/: moderation.py  profile.py  shop.py  text_commands.py
moder_bpm_prime/bot/keyboards/: inline.py
moder_bpm_prime/bot/middlewares/: database.py
moder_bpm_prime/bot/services/: moderation_service.py
moder_bpm_prime/bot/utils/: formatting.py
moder_bpm_prime/docs/: RAILWAY_DEPLOY.md  RAILWAY_DEPLOY_2026.md
moder_bpm_prime/scripts/: deploy.sh  init_db.py
moder_bpm_prime/tests/: test_farming.py
scripts/: backup_db.sh
tests/: conftest.py  test_blacklist.py
(+1 files in other folders)
