[project]
name = "moder_bpm_prime"
version = "0.1.0"
description = "Telegram moderation + farming bot for BPM PRIME"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "sqlalchemy==2.0.32",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.1",
    "redis==5.0.1",
    "structlog==24.1.0",
    "apscheduler==3.10.4",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.3",
    "pytest-cov==5.0.0",
    "ruff==0.5.6",
    "mypy==1.11.1",
    "types-redis==4.6.12",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "T20"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]